syntax = "proto3";

package pb;

message Bottle{
    string id = 1;
    bytes content = 2;
}

message StoreResponse {
    string err = 1;
}

message GetRequest {
    string id = 1;
}

message GetResponse{
    Bottle bottle = 1;
    string err = 2;
}

service Crate {
    rpc Pour (GetRequest) returns (Bottle) {}
    rpc Store (Bottle) returns (StoreResponse) {}
    rpc Drain (GetRequest) returns (Bottle) {}
}